--- a/Develop/index.html
+++ b/Develop/index.html
@@ -55,30 +55,34 @@
             </p>
         </section>
     </main>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <!-- line 58 was a div repalced by section -->
+    <section class="benefits">
+        <!-- line 61 replaced div with section  -->
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <!-- line 69 replaced div with section  -->
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <!-- line 77 replaced div with section  -->
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    
+        </section>
+    </section>
+    <!-- line 86 replaced div with footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
